     OutputStyle or --style was configured with the value 0 (vnstat)
 - New
   - Support input of more than 31 characters in interface name when using
     interface1+interface2 syntax data merge queries
   - Support passing --config option multiple times, later files override
     earlier files if settings overlap (vnstat and vnstati)
   - Add --style support for -tr / --traffic


2.9 / 23-Jan-2022

 - Fixed
   - RescanDatabaseOnSave configuration option wasn't being read from the
     configuration file resulting in the feature always being enabled
   - Hourly graph image output using large fonts didn't correctly fade out
     the x-axis line for hours not having data available
 - New
   - Add --alert for producing output and/or specific exit status when
     configured condition and transfer limit is exceeded, can also be used
     for "quota remaining" type of queries depending on used parameters
   - Add configuration option InterfaceMatchMethod which allows configuring
     the possibility of specifying an interface for database queries by using
     its alias instead of system provided interface name, enabled by default
     to support case insensitive matching of the beginning of interface
     aliases (vnstat and vnstati)
   - Image output file extension allows selecting the used image file format
     as long as the used LibGD supports it, PNG is no longer the only option
   - Add configuration option HourlyGraphMode for changing the output mode
     of the graph, 0 = 24 hour sliding window (default, as in previous
     releases), 1 = graph begins from midnight
   - Add mode parameter for -hg / --hoursgraph options for overriding the
     HourlyGraphMode configuration option setting from the command line
   - Add vertical line to image output hourly graph to visualize midnight
   - Add -t / --timestamp options to daemon for enabling timestamps to prints
     when the daemon is running in the foreground attached to a terminal