@@ -315,8 +315,10 @@ traffic values in the output are in bytes. An optional
 parameter can be used for limiting the output to only selected information.
 Everything is shown by default. Setting
 .I mode
-to 'f' will output only 5 minute resolution entries, 'h' hours, 'd' days, 'm' months, 'y'
-years and 't' the top days. Alternatively or in combination with
+to 's' will output a summary containing the last 2 entries of 5 minute, hourly,
+daily, monthly and yearly resolution data, 'f' will output only 5 minute
+resolution entries, 'h' hours, 'd' days, 'm' months, 'y' years and 't' the top
+days. Alternatively or in combination with
 .I mode
 an optional
 .I limit
@@ -512,8 +514,10 @@ traffic values in the output are in bytes. An optional
 parameter can be used for limiting the output to only selected information.
 Everything is shown by default. Setting
 .I mode
-to 'f' will output only 5 minute resolution entries, 'h' hours, 'd' days, 'm' months, 'y'
-years and 't' the top days. Alternatively or in combination with
+to 's' will output a summary containing the last 2 entries of 5 minute, hourly,
+daily, monthly and yearly resolution data, 'f' will output only 5 minute
+resolution entries, 'h' hours, 'd' days, 'm' months, 'y' years and 't' the top
+days. Alternatively or in combination with
 .I mode
 an optional
 .I limit
